[package]
name = "oner-iot"
version = "0.1.0"
authors = ["0x4 <otavio.onoue@outlook.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "oner-iot"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
dotenv = "*"
embassy-futures = "0.1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tokio = { version = "*", features = ["rt"] }
paste = "1.0.15"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released